--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1 class="showOnHover">Сервер должен отвечать на входящие HTTP-запросы. Например, когда вы вводите URL в адресную строку браузера, то отправляется запрос на сервер, чтобы тот вернул соответствующую веб-страницу. Если страница была перемещена, удалена или ее не существовало вовсе, сервер вернёт ошибку 404.</h1>
     </div>
     <footer class="footer">
-      <h2>Вернуться на <a href="https://practicum.yandex.ru">Главную страницу</a></h2>
+      <h2>Вернуться на <a href="https://practicum.yandex.ru">главную страницу</a></h2>
     </footer>
   </body>
 </html>
